fix)O3-2324:Order Basket should look right on tablet

--- a/packages/esm-patient-medications-app/src/drug-order-basket-panel/drug-order-basket-panel.scss
+++ b/packages/esm-patient-medications-app/src/drug-order-basket-panel/drug-order-basket-panel.scss
@@ -16,17 +16,10 @@
   margin-bottom: spacing.$spacing-03;
 }
 
-.desktopHeading {
+.desktopHeading, .tabletHeading{
   background-color: white;
   h4 {
     @include type.type-style('heading-compact-02');
-    color: $text-02;
-  }
-}
-
-.tabletHeading {
-  h4 {
-    @include type.type-style('heading-03');
     color: $text-02;
   }
 }
@@ -48,11 +41,17 @@
    margin-right: 0.8rem;
 }
 
-.desktopTile, .tabletTile {
+.desktopTile {
   padding: 0;
   border-top: 1px solid #bae6ff;
   border-right: none;
   border-left: 4px solid #0072c3;
+}
+
+.tabletTile {
+  padding: 0;
+  border-top: 1px solid #bae6ff;
+  border-right: none;
 }
 
 .collapsedTile {
