--- a/packages/esm-patient-medications-app/src/drug-order-basket-panel/order-basket-item-tile.scss
+++ b/packages/esm-patient-medications-app/src/drug-order-basket-panel/order-basket-item-tile.scss
@@ -10,6 +10,7 @@
 .clickableTileTablet {
   &:not(:last-of-type) {
     border-bottom: 0.0625rem solid $ui-03;
+    padding: 15px;
   }
 
   &:nth-child(even) {
@@ -17,7 +18,7 @@
   }
 
   &:nth-child(odd) {
-    background-color: $ui-01;
+    background-color: $ui-02;
   }
 }
 
